deploy/11-filebeat-v8.5.1.yml
---
# Source: filebeat/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  namespace: elk
  labels:
    app: "filebeat"
spec:
  selector:
    matchLabels:
      app: "filebeat"
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
      labels:
        app: "filebeat"
    spec:
      tolerations: 
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      nodeSelector: 
        {}
      affinity: 
        {}
      serviceAccountName: filebeat-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - name: elasticsearch-master-certs
        secret:
          secretName: elasticsearch-master-certs
      - name: filebeat-config
        configMap:
          defaultMode: 0600
          name: filebeat-daemonset-config
      - name: data
        hostPath:
          path: /var/lib/filebeat
          type: DirectoryOrCreate
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/containerd/
      - name: varlog
        hostPath:
          path: /var/log
      - name: varruncontainerdsock
        hostPath:
          path: /var/run/containerd/containerd.sock
      containers:
      - name: "filebeat"
        image: "elastic/filebeat:8.5.1"
        imagePullPolicy: "IfNotPresent"
        args:
        - "-e"
        - "-E"
        - "http.enabled=true"
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - |
              #!/usr/bin/env bash -e
              curl --fail 127.0.0.1:5066
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - |
              #!/usr/bin/env bash -e
              filebeat test output
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext: 
          privileged: false
          runAsUser: 0
        volumeMounts:
        - name: elasticsearch-master-certs
          mountPath: /usr/share/filebeat/certs/
        - name: filebeat-config
          mountPath: /usr/share/filebeat/filebeat.yml
          readOnly: true
          subPath: filebeat.yml
        - name: data
          mountPath: /usr/share/filebeat/data
        - name: varlibdockercontainers
          mountPath: /var/lib/containerd/
          readOnly: true
        - name: varlog
          mountPath: /var/log
          readOnly: true
        # Necessary when using autodiscovery; avoid mounting it otherwise
        # See: https://www.elastic.co/guide/en/beats/filebeat/master/configuration-autodiscover.html
        - name: varruncontainerdsock
          mountPath: /var/run/containerd/containerd.sock
          readOnly: true
---
